--- a/rabbit-mq-sorveteria/src/main/resources/application.properties
+++ b/rabbit-mq-sorveteria/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.rabbitmq.host=prawn-01.rmq.cloudamqp.com
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=zckidaid
 spring.rabbitmq.password=CeX1sv8xcu1W1oOarLOUrzHFBW3lRybq
+server.port=8081
