--- a/rabbit-mq-sorveteria/src/main/resources/application.properties
+++ b/rabbit-mq-sorveteria/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.application.name=rabbit-mq-sorveteria
 spring.rabbitmq.host=prawn-01.rmq.cloudamqp.com
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=zckidaid
 spring.rabbitmq.password=CeX1sv8xcu1W1oOarLOUrzHFBW3lRybq
-server.port=8081
+spring.rabbitmq.virtual-host=zckidaid
+logging.level.org.springframework.amqp=DEBUG
+logging.level.org.springframework=DEBUG
+spring.main.web-application-type=none
